Added security manager and policies to UnitTests
* Added logging during compile
* The policy file from resources has to be copied to the lib directory